force-app/main/default/objects/SVMXC__SM_Scheduling_Job_Summary__c/SVMXC__SM_Scheduling_Job_Summary__c.object-meta.xml
<CustomObject>
    <description>Holds the job details run by Scheduling Engine</description>
    <label>Scheduling Job Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Job Summaries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>