force-app/main/default/objects/SVMXC__SM_Scheduling_Job_Summary__c/fields/SVMXC__SM_Dispatch_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Dispatch_Process_Name__c</fullName>
    <description>Name of the dispatch process holding the scheduling configuration</description>
    <inlineHelpText>Name of the dispatch process holding the scheduling configuration</inlineHelpText>
    <label>Dispatch Process Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>