force-app/main/default/objects/SVMXC__SM_Scheduling_Job_Summary__c/fields/SVMXC__SM_Job_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Job_Start_Time__c</fullName>
    <description>Time at which the Scheduling Job Started</description>
    <inlineHelpText>Time at which the Scheduling Job Started</inlineHelpText>
    <label>Job Start Time</label>
    <type>Date</type>
</CustomField>